--- a/i3/config
+++ b/i3/config
@@ -2,9 +2,9 @@ bar {
   mode invisible
 }
 
+border none
 default_border none
 hide_edge_borders smart
 workspace_layout tabbed
 
 exec tellerrand
-exec wayvnc 0.0.0.0 5901
